concord_macros/tests/trybuild/fail/sema/pagination/pagination_unknown_field_cursor.stderr
error[E0609]: no field `offset` on type `concord_core::internal::CursorPagination`
  --> tests/trybuild/fail/sema/pagination/pagination_unknown_field_cursor.rs:16:13
   |
16 |             offset = count,
   |             ^^^^^^ unknown field
   |
   = note: available fields are: `cursor`, `per_page`, `send_cursor_on_first`, `stop_when_cursor_missing`

error[E0609]: no field `offset` on type `&concord_core::internal::CursorPagination`
  --> tests/trybuild/fail/sema/pagination/pagination_unknown_field_cursor.rs:16:13
   |
16 |             offset = count,
   |             ^^^^^^ unknown field
   |
   = note: available fields are: `cursor`, `per_page`, `send_cursor_on_first`, `stop_when_cursor_missing`
